@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                             http://www.tuxpaint.org/
 
-                                 April 25, 2007
+                                 April 26, 2007
 
    --------------------------------------------------------------------------
 
@@ -484,6 +484,8 @@ Windows Users
                |--------------------+---------------------+---------------|
                |turkish             |                     |               |
                |--------------------+---------------------+---------------|
+               |twi                 |                     |               |
+               |--------------------+---------------------+---------------|
                |ukrainian           |                     |               |
                |--------------------+---------------------+---------------|
                |venda               |                     |               |
@@ -789,6 +791,8 @@ Available Languages
        |tlh (*)      |tlhIngan             |Klingon              |
        |-------------+---------------------+---------------------|
        |tr_TR        |                     |Turkish              |
+       |-------------+---------------------+---------------------|
+       |twi_GH       |                     |Twi                  |
        |-------------+---------------------+---------------------|
        |uk_UA        |                     |Ukrainian            |
        |-------------+---------------------+---------------------|
