@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
-<p>April 25, 2007</p>
+<p>April 26, 2007</p>
 </center>
 
 <hr size=2 noshade>
@@ -758,6 +758,11 @@ New Breed Software</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td><code>twi</code></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td><code>ukrainian</code></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -1324,6 +1329,11 @@ New Breed Software</p>
     <td><code>tr_TR</code></td>
     <td>&nbsp;</td>
     <td>Turkish</td>
+  </tr>
+  <tr>
+    <td><code>twi_GH</code></td>
+    <td>&nbsp;</td>
+    <td>Twi</td>
   </tr>
   <tr>
     <td><code>uk_UA</code></td>
