@@ -485,6 +485,9 @@ traditional-chinese
 turkish
 .TP 2
 -
+twi
+.TP 2
+-
 ukranian
 .TP 2
 -
@@ -604,6 +607,7 @@ lots of people, including, but not limited to:
 
 Khalid Al Holan,
 Daniel Andersson,
+Joana Portia Antwi-Danso,
 Ben Armstrong,
 Dwayne Bailey,
 Martin Benjamin,
@@ -682,12 +686,13 @@ Le Quang Phan,
 Henrik Pihl,
 Pablo Pita,
 Milan Plzik,
+Sergei Popov,
 John Popplewell,
 Leandro Regueiro,
 Robin Rosenberg,
 Ilir Rugova,
+Samuel Sarpong,
 Kevin Patrick Scannell,
-Sergei Popov,
 Pavithran Shakamuri,
 Gia Shervashidze,
 Clytie Siddall,
